# napari-aphid

./: LICENSE  README.md  setup.cfg  setup.py  tox.ini
.napari-hub/: config.yml
src/napari_aphid/: RunBatch.ijm  __init__.py  _widget.py  napari.yaml  path.py
src/napari_aphid/_tests/: test_reader.py  test_sample_data.py  test_widget.py  test_writer.py
